--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "autoprefixer": "^10.4.7",
     "notistack": "^2.0.5",
     "postcss": "^8.4.13",
+    "qrcode.react": "^3.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.0.24"
   },
