--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@mui/styles": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
     "autoprefixer": "^10.4.7",
+    "bootstrap": "^5.3.3",
     "notistack": "^2.0.5",
     "postcss": "^8.4.13",
     "qrcode.react": "^3.1.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.23.1",
