--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/styles": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
     "autoprefixer": "^10.4.7",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "notistack": "^2.0.5",
     "postcss": "^8.4.13",
@@ -20,10 +21,14 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.1.0",
+    "react-lottie": "^1.2.4",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.0.24"
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.11.1",
+    "tailwindcss": "^3.0.24",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start"
